--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,15 +1,6 @@
-<p id="notice"><%= notice %></p>
-
+<%= render :partial => @post %>
 <p>
-  <b>Title:</b>
-  <%= @post.title %>
+  <%= link_to "Edit", edit_post_path(@post) %>
+  <%= link_to 'Destroy', @post, :method => :delete, :confirm => "Are you sure?" %>
+  <%= link_to 'See All posts', posts_path %>
 </p>
-
-<p>
-  <b>Body:</b>
-  <%= @post.body %>
-</p>
-
-
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
