--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,3 +4,16 @@
   <%= link_to 'Destroy', @post, :method => :delete, :confirm => "Are you sure?" %>
   <%= link_to 'See All posts', posts_path %>
 </p>
+
+<h2>Comments</h2>
+<div id="comments">
+  <%= render :partial => @post.comments %>
+</div>
+
+<%= form_for [@post, Comment.new] do |f| %>
+    <p>
+      <%= f.label :body, "New Comment" %><br>
+      <%= f.text_area :body %>
+    </p>
+    <p><%= f.submit "Add Comment" %></p>
+<% end %>
